# rust_wasm_websocket

./: .gitignore  Cargo.toml  Makefile.toml  README.md  cache59.txt  temp59.txt
.github/: rust.yml
docs/: index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/serde/de/: trait.Deserialize.js
docs/implementors/serde/ser/: trait.Serialize.js
docs/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/rust_wasm_websocket/: all.html  index.html  sidebar-items.js
docs/rust_wasm_websocket/websocket_mod/: enum.WsMessageFromServer.html  enum.WsMessageToServer.html  fn.time_now_in_minutes.html  index.html  sidebar-items.js  trait.WebSocketTrait.html
docs/src/rust_wasm_websocket/: lib.rs.html  websocket_mod.rs.html
src/: lib.rs  websocket_mod.rs
tmp/: temp58.txt
