[package]
name = "rust_wasm_websocket"
version = "0.5.2"
authors = ["Luciano Bestia <Luciano.Bestia@gmail.com>"]
edition = "2018"
description = "crate for wasm websocket"
repository = "https://github.com/LucianoBestia/rust_wasm_websocket"
readme = "README.md"
license = "MIT"
keywords = ["wasm","websocket"]
categories = ["web-programming::websocket"]
publish = false

[dependencies]
rust_wasm_websys_utils = {path = "../rust_wasm_websys_utils"}

unwrap = "1.2.1"
dodrio = "0.2.0"
#dodrio =  { git = "https://github.com/fitzgen/dodrio", branch = "master" }
#dodrio = {path = "../rust_wasm_dodrio_copy"}
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
js-sys = "0.3.46"
serde_derive = "1.0.119"
serde ="1.0.119"
serde_json = "1.0"
# newer futures have unstable .await
wasm-bindgen-futures = "0.4.19"
gloo-timers = {version="0.2.1", features=["futures"]}

[dependencies.web-sys]
version = "0.3.46"
features = [
  "console",
  "Document",
  "Element",
  "ErrorEvent",
  "Event",
  "EventListener",
  "EventTarget",
  "History",
  "HtmlAudioElement",
  "HtmlElement",
  "HtmlImageElement",
  "HtmlInputElement",
  "HtmlMediaElement",
  "KeyboardEvent",
  "Location",
  "MouseEvent",
  "Navigator",
  "Node",
  "Request",
  "RequestCache",
  "RequestCredentials",
  "RequestInit",
  "RequestMode",
  "RequestRedirect",
  "Response",
  "Storage",
  "WebSocket",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.19"