[package]
name = "rust_wasm_websocket"
version = "0.5.5"
authors = ["bestia.dev <info@bestia.dev>"]
edition = "2018"
description = "crate for wasm websocket"
repository = "https://github.com/bestia-dev/rust_wasm_websocket"
readme = "README.md"
license = "MIT"
keywords = ["wasm","websocket"]
categories = ["web-programming::websocket"]
# publish to crates.io only these files
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/lib.rs",
    "src/websocket_mod.rs"
]

[dependencies]
# my crates in crates.io
rust_wasm_websys_utils = "0.4.3"

# other crates
unwrap = "1.2.1"
dodrio = "0.2.0"
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
js-sys = "0.3.46"
serde_derive = "1.0.119"
serde ="1.0.119"
serde_json = "1.0"
wasm-bindgen-futures = "0.4.19"
gloo-timers = {version="0.2.1", features=["futures"]}

[dependencies.web-sys]
version = "0.3.46"
features = [
  "console",
  "Document",
  "Element",
  "ErrorEvent",
  "Event",
  "EventListener",
  "EventTarget",
  "History",
  "HtmlAudioElement",
  "HtmlElement",
  "HtmlImageElement",
  "HtmlInputElement",
  "HtmlMediaElement",
  "KeyboardEvent",
  "Location",
  "MouseEvent",
  "Navigator",
  "Node",
  "Request",
  "RequestCache",
  "RequestCredentials",
  "RequestInit",
  "RequestMode",
  "RequestRedirect",
  "Response",
  "Storage",
  "WebSocket",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.19"